--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -1,13 +1,15 @@
 {
-    "terminate": "ctrl+alt+q",
-    "play": "ctrl+alt+p",
+    "terminate": "tab+q",
     "pause": "ctrl+alt+space",
     "resume": "ctrl+alt+r",
     "skip": "ctrl+alt+s",
-    "stop": "ctrl+alt+enter",
+    "stop": "ctrl+alt+q",
     "volume_up": "ctrl+alt+up",
     "volume_down": "ctrl+alt+down",
     "skip_forward": "ctrl+alt+right",
     "skip_backward": "ctrl+alt+left",
-    "silent_mode": false
+    "loop": "ctrl+alt+l",
+    
+    "default_volume": 50,
+    "idle_timeout": 120
 }
